--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ body {
 }
 
 header {
-    background-color: #ffffff;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #000000;
     text-align: center;
     padding: 20px;
 }
