--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     background-color: #000000;
+   
     /*
     text-align: center;
     padding: 20px;
@@ -29,6 +30,7 @@ header {
     font-family: 'Roboto Slab', serif;
     font-weight: 100;
     margin: 10px 0;
+    font-size: 350%
 }
 
 .site-title a {
