--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header {
 }
 
 .action-button {
-    background-color: #007BFF; 
+    background-color: #000000; 
     color: white;
     border: none;
     border-radius: 4px;
@@ -157,7 +157,7 @@ header {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #28a745;
+    background-color: #f77405;
     color: white;
     border: none;
     border-radius: 50%;
@@ -169,6 +169,12 @@ header {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: transform 0.2s;
+}
+
+fa-plus{
+    color: #FFFFFF;
+    font-size: 35px
+
 }
 
 #sell-something-button:hover {
