--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ header {
     border-radius: 4px;
     padding: 10px 15px;
     cursor: pointer;
-    text-size: 150%
+    font-size: 150%
 }
 
 .action-button:hover {
