--- a/style.css
+++ b/style.css
@@ -86,10 +86,10 @@ header {
     background-color: #000000; 
     color: white;
     border: none;
+    width: 100%
     border-radius: 4px;
     padding: 10px 15px;
     cursor: pointer;
-    font-size: 150%
 }
 
 .action-button:hover {
