--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header {
 
 /* Filters Sidebar */
 .filter-container {
-    background-color: #ffffff;
+    background-color: #EAEAEA;
     padding: 20px;
     border: 1px solid #ccc;
     margin: 20px;
@@ -58,6 +58,7 @@ header {
     margin-bottom: 15px;
     display: flex;
     flex-direction: row;
+    font-family: 'Roboto,' serif; 
 }
 
 .filter-input-label {
@@ -186,7 +187,6 @@ fa-plus {
     transform: scale(1.1);
 }
 
-/* Additional Styles */
 .filter-input-element {
     display: flex;
     align-items: center;
