--- a/style.css
+++ b/style.css
@@ -59,6 +59,11 @@ header {
     display: flex;
     flex-direction: row;
     font-family: 'Roboto,' serif; 
+    align-items: center;
+}
+
+.filter-input-element {
+    margin-right: 10px;
 }
 
 .filter-fieldset {
