--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header {
     margin: 20px;
     border-radius: 5px;
     width: 250px; /* Set a fixed width for the filters box */
-    position: absolute; 
+    position: relative; 
     left: 20px; /* Align it to the left */
     top: 100px; 
     display: flex; 
