--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ header {
     color: #FFFFFF;
 }
 
+main.content {
+    display: flex;
+}
+
 /* Filters Sidebar */
 .filter-container {
     background-color: #EAEAEA;
@@ -46,9 +50,6 @@ header {
     margin: 20px;
     border-radius: 5px;
     width: 250px; /* Set a fixed width for the filters box */
-    position: relative; 
-    left: 20px; /* Align it to the left */
-    top: 0px; 
     display: flex; 
     flex-direction: column;
 }
@@ -120,6 +121,7 @@ header {
     gap: 20px;
     padding: 20px;
     margin-left: 20x; /* Add margin to account for the filters box */
+    flex-grow: 1;
 }
 
 .post {
