--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ main.content {
 }
 
 .filter-input-container {
+    margin-bottom: 15px
     display: flex;
     flex-direction: row;
     font-family: 'Roboto,' serif; 
