--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@ main.content {
 }
 
 .filter-input-container {
-    margin-bottom: 15px
     display: flex;
     flex-direction: row;
     font-family: 'Roboto,' serif; 
@@ -109,6 +108,7 @@ main.content {
     border-radius: 4px;
     padding: 10px 15px;
     cursor: pointer;
+    font-size: 150%
 }
 
 .action-button:hover {
