--- a/style.css
+++ b/style.css
@@ -108,7 +108,10 @@ main.content {
     border-radius: 4px;
     padding: 10px 15px;
     cursor: pointer;
-    font-size: 150%
+}
+
+#filter-update-button {
+    font-size: 150%;
 }
 
 .action-button:hover {
