--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ main.content {
 
 .filter-input-label {
     display: inline-block;
-    margin-bottom: 10px;
+    margin-right: 10px;
     font-weight: bold;
 }
 
