--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ main.content {
 
 .filter-input-label {
     display: inline-block;
+    margin: 10px 0;
     margin-right: 10px;
     font-weight: bold;
 }
