--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ main.content {
 .filter-input-element {
     display: flex;
     align-items: flex-start;
+    margin-bottom: 15px;
 }
 
 .filter-fieldset {
