--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ header {
 
 main {
     display: flex;
+    
 }
 
 /* Filters Sidebar */
@@ -68,12 +69,12 @@ main {
     margin-bottom: 15px;
 }
 
-/* .filter-input-label {
+.filter-input-label {
     display: inline-block;
     margin: 10px 0;
     margin-right: 10px;
     font-weight: bold;
-} */
+} 
 
 .filter-input {
     width: calc(100% - 10px);
