--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ main {
 .filter-container {
     background-color: #EAEAEA;
     padding: 15px;
-    margin: 15px;
+    margin-bottom: 15px;
     border-radius: 5px;
     width: 400px; /* Set a fixed width for the filters box */
     display: flex; 
@@ -71,7 +71,7 @@ main {
 
 .filter-input-label {
     display: inline-block;
-    margin: 10px 0;
+    /* margin: 10px 0; */
     margin-right: 10px;
     font-weight: bold;
 } 
